# novluno

./: .gitignore  Cargo.toml  README.md  imgui.ini
client/: Cargo.toml  build.rs  imgui.ini
client/deprecated/: gui.rs
client/lib/gnu-mingw/32/cmake/SDL2/: sdl2-config.cmake
client/lib/gnu-mingw/32/pkgconfig/: sdl2.pc
client/lib/gnu-mingw/64/cmake/SDL2/: sdl2-config.cmake
client/lib/gnu-mingw/64/pkgconfig/: sdl2.pc
client/src/: error.rs  main.rs
client/src/asset_loader/: list_asset_loader.rs  mod.rs
client/src/config/: list_files.rs  mod.rs
client/src/game/: input.rs  mod.rs  scene.rs
client/src/game/character/: mod.rs  player.rs
client/src/game/scene/: mod.rs
client/src/resource_manager/: data_manager.rs  list_manager.rs  map_manager.rs  mod.rs  sprite_manager.rs
client/src/sdl/: controller.rs  gui.rs  mod.rs
client/src/sdl/render/: chars.rs  text.rs
client/src/sdl/render/map/: mod.rs  objects.rs  tiles.rs
client/static/noto_font/: README
client_new/: Cargo.toml
client_new/src/: main.rs
core_compat/: Cargo.toml  temp.c
core_compat/depo/: ppm.rs
core_compat/src/: error.rs  lib.rs  lst.rs  read_rle_dir.rs  rle.rs  rmd.rs  rmm.rs  rmm.rs.fmt
core_compat/tests/: test_map_sprite_load.rs
cp949/: Cargo.toml
cp949/src/: character_table.rs  lib.rs
data/: COPY_GAME_FILES_HERE
data_converter/: .#Cargo.toml  Cargo.toml
data_converter/src/: main.rs
doc/: MapTile.mapz  formats.md  rm-formats.ods
documents/: .~lock.rm-formats.ods#
experiments/client-sdl2/: Cargo.toml  build.rs
experiments/client-wasm/: Cargo.toml
experiments/client_amethyst/: Cargo.toml
experiments/data_converter/: Cargo.toml
experiments/elixir_middleman_server/: mix.exs
experiments/game_sp/: .gitignore  Cargo.toml  _build.rs
experiments/rle2sqlite/: Cargo.toml
experiments/rm_viewer/: Cargo.toml
experiments/rm_viewer_v2/: Cargo.toml
experiments/server_encryption/: CMakeLists.txt  encrypt_decrypt.c
game_sp/: Cargo.toml  _build.rs
game_sp/src/: data_manager.rs  entry.rs  error.rs  fps.rs  game.rs  main.rs  main.rs.fmt  map_manager.rs  sdl_state.rs  sprite.rs  sprite_manager.rs  sprite_type.rs  test.rs  vec.rs
game_sp/src/game/: buffer.rs  mod.rs  render.rs
game_sp/src/sdl/: mod.rs
geometry/: Cargo.toml
geometry/src/: lib.rs  rectangle.rs  size.rs
rle2sqlite/: Cargo.toml  rm.sqlite
rle2sqlite/src/: main.rs
rle_viewer/: Cargo.toml
rle_viewer/src/: app_error.rs  application.rs  main.rs  rle_viewer.ui  rle_viewer.ui~
rm_core/: Cargo.toml
rm_core/src/: error.rs  lst.rs  read_rle_dir.rs  rle.rs  rmm.rs
rm_viewer/: Cargo.toml
rm_viewer/src/: app_data.rs  app_error.rs  app_gui.rs  application.rs  constants.rs  main.rs  (+4 more)
server/: Cargo.toml  README.md
wasm-client/: Cargo.toml
(+88 files in other folders)
