[package]
name = "client"
version = "0.1.0"
authors = ["C. Jeremiah Schneider <cjschneider2@gmail.com>"]

[dependencies.core_compat]
path = "../core_compat"

[dependencies.sdl2]
version = "*"
default-features = false
#features = ["image"]

[dependencies.glium_sdl2]
path = "../vendor/glium_sdl2"

[dependencies]
glium = "*"
sdl2-sys = "0.30"
imgui = "*"
imgui-glium-renderer = "*"
rusttype = "*"
