[package]
name = "client"
version = "0.1.0"
authors = ["C. Jeremiah Schneider <cjschneider2@gmail.com>"]

# local
[dependencies.geometry]
path = "../geometry"

[dependencies.core_compat]
path = "../core_compat"

# crates.io
[dependencies]
rusttype = "*"
lazy_static = "*"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["unsafe_textures"]
