[package]
name = "client"
version = "0.1.0"
edition = "2021"

# NOTE: Workspace dependencies are referenced with the local path
[dependencies.core_compat]
path = "../core_compat"

[dependencies.geometry]
path = "../geometry"

[dependencies]
bevy = { version = "0.13" , features = ["bevy_asset"]}
ron = "*"
thiserror = "^1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
