[package]
name = "game_sp"
version = "0.1.1"
authors = ["C. Jeremiah Schneider <cjschneider2@gmail.com>"]
#build = "build.rs"

[dependencies.core_compat]
path = "../core_compat"

#[dependencies.rusqlite]
#version = "0.11"
#features = ["bundled", "blob"]

[dependencies.sdl2]
version = "0.30"
default-features = false
features = ["image"]
